# rusty_queens

./: Cargo.toml  LICENSE  README.md  build.rs
src/: lib.rs  main.rs
tests/: main_test.rs
