[package]
name = "rusty_queens"
version = "0.2.1"
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
cfg-if = "1.0"
log = "0.4.21"
env_logger = "0.11.3"

[build-dependencies]
vergen = { version = "8.3.1", features = ["build", "git", "gitcl", "rustc"] }
anyhow = "1.0"
